Fixing alignment of logout button

--- a/src/logout.css
+++ b/src/logout.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 1%;
 }
 .logout-box {
   display: block;
